# musicvisqt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playercontroller.cpp  playercontroller.h  projectmwindow.cpp  projectmwindow.h
